--- a/public/styles/splash-screen.css
+++ b/public/styles/splash-screen.css
@@ -8,7 +8,7 @@ body fuse-splash-screen {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #111827;
+    background-color: #ffffff;
     color: #F9FAFB;
     z-index: 999999;
     pointer-events: none;
@@ -33,7 +33,7 @@ body fuse-splash-screen .spinner {
 body fuse-splash-screen .spinner > div {
     width: 12px;
     height: 12px;
-    background-color: #1E96F7;
+    background-color: #bc1d10;
     border-radius: 100%;
     display: inline-block;
     -webkit-animation: fuse-bouncedelay 1s infinite ease-in-out both;
