--- a/src/app/modules/landing/home/home.component.html
+++ b/src/app/modules/landing/home/home.component.html
@@ -18,10 +18,10 @@
                             <div
                                 class="truncate text-2xl font-semibold leading-7 tracking-tight md:text-5xl md:leading-snug"
                             >
-                                {{ t('welcome-back') }}, {{currentUser.nom}}!
+                                {{ t('Bienvenue') }}, {{currentUser.nom}}!
                             </div>
                         </ng-container>
-                        <div class="flex items-center">
+                        <!-- <div class="flex items-center">
                             <mat-icon
                                 class="icon-size-5"
                                 [svgIcon]="'heroicons_solid:bell'"
@@ -31,7 +31,7 @@
                             >
                                 You have 2 new messages and 15 new tasks
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <!-- Actions -->
@@ -43,21 +43,21 @@
                     >
                         <mat-icon
                             class="icon-size-5"
-                            [svgIcon]="'heroicons_solid:envelope'"
+                            [svgIcon]="'heroicons_solid:bell'"
                         ></mat-icon>
-                        <span class="ml-2">Messages</span>
+                        <span class="ml-2">Notifications</span>
                     </button>
                     <button mat-flat-button [color]="'primary'">
                         <mat-icon
                             class="icon-size-5"
                             [svgIcon]="'heroicons_solid:cog-8-tooth'"
                         ></mat-icon>
-                        <span class="ml-2">Settings</span>
+                        <span class="ml-2">Paramètres</span>
                     </button>
                 </div>
             </div>
             <!-- Project selector -->
-            <div
+            <!-- <div
                 class="bg-default relative flex cursor-pointer self-start overflow-hidden rounded-t-xl border border-b-0 pb-1 pl-5 pr-4 pt-2"
                 matRipple
                 [matMenuTriggerFor]="projectsMenu"
@@ -101,7 +101,7 @@
                         Withinpixels
                     </button>
                 </mat-menu>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -166,7 +166,7 @@
                                     >
                                         TND
                                     </div>
-                                    <div
+                                    <!-- <div
                                         class="text-secondary mt-5 flex w-full items-baseline justify-center"
                                     >
                                         <div
@@ -179,7 +179,7 @@
                                         >
                                             13
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <!-- Overdue -->
@@ -221,14 +221,14 @@
                                     <div
                                         class="text-7xl font-bold leading-none tracking-tight text-red-500 sm:text-8xl"
                                     >
-                                        17
+                                        0
                                     </div>
                                     <div
                                         class="text-lg font-medium text-red-600 dark:text-red-500"
                                     >
                                         Commandes
                                     </div>
-                                    <div
+                                    <!-- <div
                                         class="text-secondary mt-5 flex w-full items-baseline justify-center"
                                     >
                                         <div
@@ -241,7 +241,7 @@
                                         >
                                             9
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <!-- Issues -->
@@ -285,12 +285,12 @@
                                     >
                                         24
                                     </div>
-                                    <div
+                                    <!-- <div
                                         class="text-lg font-medium text-amber-600 dark:text-amber-500"
                                     >
                                         Open
-                                    </div>
-                                    <div
+                                    </div> -->
+                                    <!-- <div
                                         class="text-secondary mt-5 flex w-full items-baseline justify-center"
                                     >
                                         <div
@@ -303,11 +303,11 @@
                                         >
                                             19
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <!-- Features -->
-                            <div
+                            <!-- <div
                                 class="bg-card flex flex-auto flex-col overflow-hidden rounded-2xl p-6 shadow"
                             >
                                 <div class="flex items-start justify-between">
@@ -367,7 +367,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- Github issues summary -->
                             <div
                                 class="bg-card flex flex-auto flex-col overflow-hidden rounded-2xl p-6 shadow sm:col-span-2 md:col-span-4"
@@ -1351,77 +1351,7 @@
                 </mat-tab>
 
                 <!-- Team -->
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <span class="inline-flex items-center space-x-2">
-                            <span class="">Team</span>
-                            <span
-                                class="rounded-full bg-primary-100 px-2 py-1 text-sm text-on-primary-100"
-                                >9</span
-                            >
-                        </span>
-                    </ng-template>
-                    <ng-template matTabContent>
-                        <div
-                            class="grid w-full min-w-0 grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"
-                        >
-                            @for (member of data.teamMembers; track member) {
-                                <div
-                                    class="bg-card flex flex-auto flex-col items-center overflow-hidden rounded-2xl shadow"
-                                >
-                                    <!-- Avatar & Info -->
-                                    <div
-                                        class="flex w-full flex-auto flex-col p-8 text-center"
-                                    >
-                                        <div
-                                            class="mx-auto h-32 w-32 overflow-hidden rounded-full"
-                                        >
-                                            <img
-                                                class="h-full w-full object-cover"
-                                                [src]="member.avatar"
-                                            />
-                                        </div>
-                                        <div class="mt-6 font-medium">
-                                            {{ member.name }}
-                                        </div>
-                                        <div class="text-secondary">
-                                            {{ member.title }}
-                                        </div>
-                                    </div>
-                                    <!-- Email & Phone -->
-                                    <div
-                                        class="flex w-full items-center divide-x border-t"
-                                    >
-                                        <a
-                                            class="flex flex-auto items-center justify-center py-4 hover:bg-hover"
-                                            [href]="'mailto:' + member.email"
-                                        >
-                                            <mat-icon
-                                                class="text-hint icon-size-5"
-                                                [svgIcon]="
-                                                    'heroicons_solid:envelope'
-                                                "
-                                            ></mat-icon>
-                                            <span class="ml-2">Email</span>
-                                        </a>
-                                        <a
-                                            class="flex flex-auto items-center justify-center py-4 hover:bg-hover"
-                                            [href]="'tel:' + member.phone"
-                                        >
-                                            <mat-icon
-                                                class="text-hint icon-size-5"
-                                                [svgIcon]="
-                                                    'heroicons_solid:phone'
-                                                "
-                                            ></mat-icon>
-                                            <span class="ml-2">Call</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            }
-                        </div>
-                    </ng-template>
-                </mat-tab>
+                <!--TODO ADD BACK TEAM-->
             </mat-tab-group>
         </div>
     </div>
