--- a/src/app/modules/auth/sign-out/sign-out.component.html
+++ b/src/app/modules/auth/sign-out/sign-out.component.html
@@ -12,28 +12,28 @@
             <div
                 class="mt-8 text-center text-4xl font-extrabold leading-tight tracking-tight"
             >
-                You have signed out!
+                Vous êtes déconnecté(e) !
             </div>
             <div class="mt-0.5 flex justify-center font-medium">
                 <!-- Redirect countdown -->
                 @if (countdown > 0) {
-                    Redirecting in
+                    Redirection dans
                     {{ countdown | i18nPlural: countdownMapping }}
                 }
 
                 <!-- Redirect message -->
                 @if (countdown === 0) {
-                    You are now being redirected!
+                    Vous êtes maintenant redirigé(e) !
                 }
             </div>
 
             <!-- Form footer -->
             <div class="text-secondary mt-8 text-center text-md font-medium">
-                <span>Go to</span>
+                <span>Aller à la</span>
                 <a
                     class="ml-1 text-primary-500 hover:underline"
                     [routerLink]="['/sign-in']"
-                    >sign in
+                    >connection
                 </a>
             </div>
         </div>
