--- a/src/app/modules/auth/unlock-session/unlock-session.component.html
+++ b/src/app/modules/auth/unlock-session/unlock-session.component.html
@@ -139,15 +139,14 @@
         <!-- Content -->
         <div class="relative z-10 w-full max-w-2xl">
             <div class="text-7xl font-bold leading-none text-gray-100">
-                <div>Welcome to</div>
-                <div>our community</div>
+                <div>Bienvenue à SMG</div>
             </div>
-            <div class="mt-6 text-lg leading-6 tracking-tight text-gray-400">
+            <!-- <div class="mt-6 text-lg leading-6 tracking-tight text-gray-400">
                 Fuse helps developers to build organized and well coded
                 dashboards full of beautiful and rich modules. Join us and start
                 building your application today.
-            </div>
-            <div class="mt-8 flex items-center">
+            </div> -->
+            <!-- <div class="mt-8 flex items-center">
                 <div class="flex flex-0 items-center -space-x-1.5">
                     <img
                         class="h-10 w-10 flex-0 rounded-full object-cover ring-4 ring-gray-800 ring-offset-1 ring-offset-gray-800"
@@ -169,7 +168,7 @@
                 <div class="ml-4 font-medium tracking-tight text-gray-400">
                     More than 17k people joined us, it's your turn
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
