--- a/src/app/layout/common/user/user.component.html
+++ b/src/app/layout/common/user/user.component.html
@@ -24,7 +24,7 @@
     <button mat-menu-item>
         <span class="flex flex-col leading-none">
             <span>Connecté en tant que</span>
-            <span class="mt-1.5 text-md font-medium">{{ user.email }}</span>
+            <span class="mt-1.5 text-md font-medium">{{ user.name }}</span>
         </span>
     </button>
     <mat-divider class="my-2"></mat-divider>
