--- a/src/app/layout/layouts/vertical/dense/dense.component.html
+++ b/src/app/layout/layouts/vertical/dense/dense.component.html
@@ -52,6 +52,7 @@
             <shortcuts></shortcuts>
             <!--<messages></messages>-->
             <notifications></notifications>
+            <panier></panier>
             <!--<button
                 class="lg:hidden"
                 mat-icon-button
