--- a/src/app/modules/admin/dashboards/contacts/details/details.component.html
+++ b/src/app/modules/admin/dashboards/contacts/details/details.component.html
@@ -22,7 +22,7 @@
                     [routerLink]="['../']"
                 >
                     <mat-icon
-                        class="text-white"
+                        class="text-black"
                         [svgIcon]="'heroicons_outline:x-mark'"
                     ></mat-icon>
                 </a>
