Commandes and pdf added

--- a/src/app/modules/admin/dashboards/commandes/commandes.component.html
+++ b/src/app/modules/admin/dashboards/commandes/commandes.component.html
@@ -32,7 +32,7 @@
                         #commandesTable
                     >
                         <!-- Commande ID -->
-                        <ng-container matColumnDef="nFact">
+                        <ng-container matColumnDef="id">
                             <th
                                 mat-header-cell
                                 mat-sort-header
@@ -44,13 +44,13 @@
                                 <span
                                     class="text-secondary whitespace-nowrap pr-6 text-sm font-medium"
                                 >
-                                    {{ commande.nfact }}
+                                    {{ commande.id }}
                                 </span>
                             </td>
                         </ng-container>
 
                         <!-- Date -->
-                        <ng-container matColumnDef="datvte">
+                        <ng-container matColumnDef="commandeDate">
                             <th
                                 mat-header-cell
                                 mat-sort-header
@@ -60,13 +60,13 @@
                             </th>
                             <td mat-cell *matCellDef="let commande">
                                 <span class="whitespace-nowrap pr-6">
-                                    {{ convertToDate(commande.datvte) | date: 'dd/MM/yyyy' }}
+                                    {{ commande.commandeDate | date: 'dd/MM/yyyy' }}
                                 </span>
                             </td>
                         </ng-container>
 
                         <!-- Amount -->
-                        <ng-container matColumnDef="brutht">
+                        <ng-container matColumnDef="total">
                             <th
                                 mat-header-cell
                                 mat-sort-header
@@ -78,13 +78,13 @@
                                 <span
                                     class="whitespace-nowrap pr-6 font-medium"
                                 >
-                                    {{convertStringToDecimal(commande.brutht) }} TND
+                                    {{commande.total.toFixed(3) }} TND
                                 </span>
                             </td>
                         </ng-container>
 
                          <!-- Status -->
-                         <ng-container matColumnDef="etat">
+                         <ng-container matColumnDef="status">
                             <th
                                 mat-header-cell
                                 mat-sort-header
@@ -98,7 +98,7 @@
                                 >
                                     <span
                                         class="whitespace-nowrap leading-relaxed"
-                                        > Validé </span
+                                        > {{commande.status}} </span
                                     >
                                 </span>
                             </td>
@@ -115,7 +115,7 @@
                             <td mat-cell *matCellDef="let commande">
                                 <button
                                     mat-icon-button
-                                    (click)="openPdf(commande.nfact)"
+                                    (click)="openPdf(commande.id)"
                                 >
                                     <mat-icon>picture_as_pdf</mat-icon>
                                 </button>
