--- a/src/app/modules/landing/home/home.component.html
+++ b/src/app/modules/landing/home/home.component.html
@@ -307,14 +307,14 @@
                                 </div>
                             </div>
                             <!-- Features -->
-                            <!-- <div
+                            <div
                                 class="bg-card flex flex-auto flex-col overflow-hidden rounded-2xl p-6 shadow"
                             >
                                 <div class="flex items-start justify-between">
                                     <div
                                         class="truncate text-lg font-medium leading-6 tracking-tight"
                                     >
-                                        Features
+                                        Plus de 
                                     </div>
                                     <div class="-mr-3 -mt-2 ml-2">
                                         <button
@@ -345,17 +345,17 @@
                                     <div
                                         class="text-7xl font-bold leading-none tracking-tight text-green-500 sm:text-8xl"
                                     >
-                                        38
+                                        1547
                                     </div>
                                     <div
                                         class="text-lg font-medium text-green-600 dark:text-green-500"
                                     >
-                                        Proposals
+                                        clients
                                     </div>
                                     <div
                                         class="text-secondary mt-5 flex w-full items-baseline justify-center"
                                     >
-                                        <div
+                                        <!-- <div
                                             class="truncate text-md font-medium"
                                         >
                                             Implemented:
@@ -364,10 +364,10 @@
                                             class="ml-1.5 text-lg font-semibold"
                                         >
                                             16
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
-                            </div> -->
+                            </div>
                             <!-- Github issues summary -->
                             <div
                                 class="bg-card flex flex-auto flex-col overflow-hidden rounded-2xl p-6 shadow sm:col-span-2 md:col-span-4"
