new search and fixes

--- a/src/app/layout/layouts/horizontal/modern/modern.component.html
+++ b/src/app/layout/layouts/horizontal/modern/modern.component.html
@@ -69,6 +69,7 @@
             <shortcuts></shortcuts>
             <!-- <messages></messages> -->
             <notifications></notifications>
+            <panier></panier>
             <!-- <button
                 class="lg:hidden"
                 mat-icon-button
