--- a/src/app/layout/common/panier/panier.component.html
+++ b/src/app/layout/common/panier/panier.component.html
@@ -31,7 +31,7 @@
                     <div class="flex flex-auto py-5 pl-6">
                         <div class="flex flex-col">
                             <div class="font-semibold">{{ pA.article.designation }}</div>
-                            <div class="text-secondary">Prix: {{ pA.article.pvht }} TND</div>
+                            <div class="text-secondary">Prix: {{ convertStringToDecimal(pA.article.pvht) }} TND</div>
                             <div class="flex items-center mt-2">
                                 <button mat-icon-button (click)="updateQuantity(pA.article.id, pA.quantity - 1)" [disabled]="pA.quantity <= 1">
                                     <mat-icon>remove</mat-icon>
