--- a/src/app/modules/admin/dashboards/articles/list/list.component.html
+++ b/src/app/modules/admin/dashboards/articles/list/list.component.html
@@ -60,6 +60,11 @@
                 <div class="relative">
                     @if (articles$ | async; as articles) {
                         @if (articles.length) {
+                            <div
+                                        class="text-secondary sticky top-0 z-10 -mt-px border-b border-t bg-gray-50 px-6 py-1 font-medium uppercase dark:bg-gray-900 md:px-8"
+                                    >
+                                        {{articles.length}} Résultats: 
+                                    </div>
                             @for (
                                 article of articles;
                                 track trackByFn(i, article);
@@ -67,18 +72,7 @@
                             ) {
                                 <!-- if article doesnt have a name, dont show him-->
                                 @if (article.designation && article.pvht) {
-                                <!-- Group -->
-                                @if (
-                                    i === 0 ||
-                                    article.designation.charAt(0) !==
-                                        articles[i - 1].designation.charAt(0)
-                                ) {
-                                    <div
-                                        class="text-secondary sticky top-0 z-10 -mt-px border-b border-t bg-gray-50 px-6 py-1 font-medium uppercase dark:bg-gray-900 md:px-8"
-                                    >
-                                        {{ article.designation.charAt(0) }}
-                                    </div>
-                                }
+                                    
                                 <!-- Article -->
                                 <a
                                     class="z-20 flex cursor-pointer items-center border-b px-6 py-4 md:px-8"
